--- a/ui/navigation.reel/navigation.css
+++ b/ui/navigation.reel/navigation.css
@@ -106,7 +106,7 @@
     box-sizing: border-box;
     z-index: 11;
     margin: 0;
-    top: 50px;
+    top: 30px;
     left: -40px;
     width: 40px;
     height: 34px;
